# loggar

./: .gitignore  LICENSE  README.md  build.sh  pyproject.toml  requirements.txt
docs/: requirements.txt
docs/source/: changelog.rst  conf.py  index.rst  spelling_wordlist.txt
loggar/: loggar.py
loggar.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
loggar/libs/: argparser.py  config.toml  database.py
loggar/meta/database/setup/: create_table__access_failure.sql
loggar/objects/: _baselogobject.py  accesslogobject.py
loggar/readers/: lastreader.py
pylintr/results/: libs_argparser.plr  libs_config.plr  libs_database.plr  libs_enums.plr  loggar_loggar.plr  objects_accesslogobject.plr  readers_lastreader.plr  summary.plr
