[build-system]
requires = ["wheel", "setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "loggar"
description = "A utility for archiving Linux log files."
authors = [{name = "The Developers", email = "development@s3dev.uk"}]
classifiers = [
               "Development Status :: 4 - Beta",
               "Intended Audience :: Developers",
               "Intended Audience :: Information Technology",
               "Intended Audience :: System Administrators",
               "Operating System :: POSIX :: Linux",
               "Operating System :: Microsoft :: Windows",
               "Programming Language :: Python :: 3.9",
               "Programming Language :: Python :: 3.10",
               "Programming Language :: Python :: 3.11",
               "Programming Language :: Python :: 3.12",
               "Programming Language :: Python :: 3.13",
               "Programming Language :: Python :: Implementation :: CPython",
               "Topic :: System :: Archiving",
               "Topic :: System :: Archiving :: Backup",
               "Topic :: System :: Logging",
               "Topic :: System :: Systems Administration",
               "Topic :: Utilities",
              ]
dependencies = [
                "dbilib",
                "pandas",
               ]
dynamic = ["version"]
keywords = ["utility", "utilities", "archiving"]
license = "MIT"
license-files = ["LICENSE"]
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.9"

[project.urls]
Documentation = "https://loggar.readthedocs.io/en/latest/index.html"
Homepage = "https://github.com/s3dev/loggar"
Repository = "https://github.com/s3dev/loggar"

[tool.setuptools.dynamic]
version = {attr = "loggar.__version__"}

[tool.setuptools.packages.find]
where = ["."]
include = ["loggar"]
exclude = []

# These files are collected *if* configured in Git.
[tool.setuptools.data-files]
"meta.database.setup" = ["*.sql"]

[project.scripts]
loggar = "loggar.loggar:main"
